--- a/src/style.css
+++ b/src/style.css
@@ -105,3 +105,10 @@ form {
   display: flex;
   flex-direction: row;
 }
+
+.timesheetRow {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  padding: 5px;
+  border-bottom: 1px solid var(--color-text-grey);
+}
