--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,11 @@
 :root {
   font-family: Arial, Helvetica, sans-serif;
-  --color-body-dark: black;
+  --color-body-dark: #333;
   --color-text-white: #ffffff;
   --color-text-grey: rgb(219, 219, 219);
   --color-header-green: rgb(72, 141, 72);
   --color-header-lightgreen: rgb(70, 165, 70);
+  --color-bg-softwhite: #f2f2f2;
 }
 
 * {
@@ -27,26 +28,36 @@ option {
 }
 
 html,
-body {
+body,
+#root {
+  background-color: var(--color-bg-softwhite);
+  height: 100%;
 }
 
 body {
-  /* background-color: rgb(234, 234, 234); */
   margin: 0 auto;
   max-width: 800px;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
 header,
-main {
+main,
+footer {
   padding: 10px;
 }
 
-header {
+header,
+footer {
   background-color: var(--color-header-green);
 }
 
 main {
   background-color: var(--color-body-dark);
+  flex-grow: 1;
 }
 
 h1 {
