--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   font-family: Arial, Helvetica, sans-serif;
   --color-bg-softwhite: #f2f2f2;
   --color-body-dark: #333;
+  --color-grey:#555;
   --color-text-white: #ffffff;
   --color-text-grey: rgb(219, 219, 219);
   --color-header-green: rgb(72, 141, 72);
@@ -132,12 +133,40 @@ form {
   flex-direction: row;
 }
 
+table {
+  border: 2px solid var(--color-text-grey);
+}
+thead,
+tfoot {
+  background-color: var(--color-header-green);
+}
+th,
+td {
+  border: 1px solid var(--color-text-grey);
+  padding: 8px 5px;
+}
+
+thead > *,
+tfoot > * {
+  font-weight: bold;
+}
+
+tbody > tr:nth-of-type(even) {
+  background-color: var(--color-grey);
+}
+
+td {
+  text-align: center;
+}
+
+tfoot th {
+  text-align: right;
+}
+
 .timesheetRow {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
   padding: 5px;
   gap: 5px;
-  border-bottom: 1px solid var(--color-text-grey);
+  /* border-bottom: 1px solid var(--color-text-grey); */
 }
 
 .centeredText {
