--- a/src/style.css
+++ b/src/style.css
@@ -125,6 +125,7 @@ form {
   padding: 10px;
   gap: 5px;
   display: flex;
+  justify-content: space-between;
   border: 1px solid rgb(189, 189, 189);
 }
 
